# safe-rs

./: Cargo.toml  README.md  justfile
cli/: Cargo.toml
cli/src/: bundle.rs  cli.rs  main.rs  output.rs  sig_parser.rs  wallet.rs
cli/src/commands/: call.rs  create.rs  info.rs  mod.rs  send.rs
examples/: multicall_erc20.rs  simple_transfer.rs  simulation_only.rs
src/: account.rs  create2.rs  eoa.rs  error.rs  lib.rs  safe.rs  wallet.rs
src/chain/: config.rs  mod.rs
src/contracts/: mod.rs
src/encoding/: eip712.rs  mod.rs  multisend.rs
src/signing/: ecdsa.rs  mod.rs
src/simulation/: fork.rs  mod.rs
src/types/: batch_result.rs  call.rs  mod.rs  operation.rs
tests/: e2e.rs
tests/e2e/: common.rs  eoa_operations.rs  erc20_operations.rs  is_safe.rs  safe_client.rs  safe_deployment.rs  safe_transactions.rs  simulation_debug.rs  simulation_verification.rs  state_diff_verification.rs  tracing.rs  wallet.rs
