[package]
name = "safe-rs"
version = "0.1.0"
edition = "2021"
description = "Rust library for Safe v1.4.1 smart account interaction"
license = "MIT"
repository = "https://github.com/tynes/safe-rs"
keywords = ["ethereum", "safe", "multisig", "smart-account"]
categories = ["cryptography", "web-programming"]

[dependencies]
alloy = { version = "1.4", features = ["full", "signer-local"] }
alloy-primitives = "1.4"
alloy-sol-types = "1.4"
foundry-fork-db = "0.22"
revm = { version = "34", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }
url = "2"

[[example]]
name = "simple_transfer"
path = "examples/simple_transfer.rs"

[[example]]
name = "multicall_erc20"
path = "examples/multicall_erc20.rs"

[[example]]
name = "simulation_only"
path = "examples/simulation_only.rs"
