[package]
name = "safe"
version = "0.1.0"
edition = "2021"
description = "Cast-like CLI for Safe transactions"
license = "MIT"

[[bin]]
name = "safe"
path = "src/main.rs"

[dependencies]
safe-rs = { path = ".." }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
alloy = { version = "1.4", features = ["full", "signer-local"] }
alloy-primitives = "1.4"
alloy-dyn-abi = "1.4"
alloy-sol-types = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
eyre = "0.6"
color-eyre = "0.6"
dialoguer = "0.11"
hex = "0.4"
rpassword = "7"
